--- a/style.css
+++ b/style.css
@@ -320,6 +320,7 @@ a {
     background-repeat: no-repeat;
     background: url(./image/header-background.png);
     background-size: cover;
+    background-position: center;
 }
 
 .header-rose-svg {
@@ -583,6 +584,7 @@ a {
     background-image: url(./image/main-background-kid.png);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: top;
 }
 
 .gallery-secret {
@@ -663,4 +665,128 @@ a {
     gap: 90px;
     align-items: center;
     justify-content: center;
+    margin: 0;
+}
+
+.hills-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 248px 0px 257px 0px;
+    position: relative;
+    gap: 35px;
+}
+
+.first-photo {
+    position: absolute;
+    bottom: 8px;
+}
+
+.second-photo {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+}
+
+.hill-title {
+    width: 614px;
+    height: 100px;
+    margin: 0;
+}
+
+.hill-text {
+    width: 470px;
+    height: 84px;
+    margin: 0;
+}
+
+.experiences-container {
+    background-image: url(./image/main-live-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-position: right;
+}
+
+.experience-quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 145px 0px 0px 0px;
+    gap: 68px;
+}
+
+.experience-title {
+    width: 1056px;
+    height: 142px;
+    margin: 0;
+}
+
+.experience-svg {
+    fill: #FFFFFF;
+    position: absolute;
+    left: 520px;
+    top: 290px;
+    z-index: 2;
+}
+
+.circle-svg {
+    border-radius: 100%;
+    background-color: #E93A7D;
+    width: 95px;
+    height: 95px;
+    position: absolute;
+    left: 480px;
+    top: 253px;
+    z-index: 1;
+}
+
+.experience-media {
+    position: relative;
+}
+
+.experience-content-text {
+    color: rgb(255, 255, 255);
+    font-family: DM Sans;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.5px;
+    text-align: left;
+    opacity: 0.7;
+    width: 334px;
+    margin: 0;
+}
+
+.experience-content-title {
+    margin: 0;
+}
+
+.experience-list {
+    display: flex;
+    padding: 125px 0px 255px 0px;
+    gap: 75px;
+}
+
+.experience-content {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 15px;
+    padding: 0px 0px 0px 41px;
+}
+
+.experience-item {
+    display: flex;
+    align-items: center;
+    width: 610px;
+    height: 195px;
+}
+
+.experience-image-list {
+    width: 233px;
+    height: 151px;
 }
